wmo-wigos template: adds field datapolicy
also to doc and sample yml

--- a/sample-wmo-wigos.yml
+++ b/sample-wmo-wigos.yml
@@ -214,6 +214,6 @@ facility:
                               measurement_unit: 'Cel'
                               temporal_reporting_interval: 'PT1H'
                               time_stamp_meaning: 'end'
-                              
+                              data_policy: 'WMOAdditional'
               observed_property: 224
             
